@@ -1,6 +1,11 @@
 # ChangeLog for sys-block/tgt
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-block/tgt/ChangeLog,v 1.8 2010/10/21 09:59:51 alexxy Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-block/tgt/ChangeLog,v 1.9 2011/01/30 16:33:59 alexxy Exp $
+
+*tgt-1.0.12 (30 Jan 2011)
+
+  30 Jan 2011; Alexey Shvetsov <alexxy@gentoo.org> +tgt-1.0.12.ebuild:
+  Version bump per bug #352275
 
 *tgt-1.0.9 (21 Oct 2010)
 
